--- a/app/src/main/res/layout/activity_download.xml
+++ b/app/src/main/res/layout/activity_download.xml
@@ -1,90 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/viewBg"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/viewBg"
     android:textAlignment="center"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent">
+
     <LinearLayout
-        android:orientation="vertical"
-        android:padding="16dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="16dp">
+
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
             <LinearLayout
-                android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
                 <FrameLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
+
                     <ImageView
                         android:id="@+id/image"
                         android:layout_width="match_parent"
                         android:layout_height="200dp"
                         android:scaleType="centerCrop"
                         app:srcCompat="@drawable/back" />
+
                     <LinearLayout
-                        android:layout_gravity="left"
-                        android:orientation="horizontal"
-                        android:background="@drawable/btn_alt"
-                        android:padding="10dp"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="left"
+                        android:background="@drawable/btn_alt"
+                        android:orientation="horizontal"
+                        android:padding="10dp">
+
                         <TextView
-                            android:textSize="22sp"
-                            android:textStyle="bold"
-                            android:textColor="@color/white"
                             android:id="@+id/views"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/install_process"
                             android:layout_weight="1"
                             android:fontFamily="@font/bebasbook"
-                            android:textAlignment="center" />
+                            android:text="@string/install_process"
+                            android:textAlignment="center"
+                            android:textColor="@color/white"
+                            android:textSize="22sp"
+                            android:textStyle="bold" />
                     </LinearLayout>
                 </FrameLayout>
+
                 <TextView
-                    android:textSize="22sp"
-                    android:textStyle="bold"
-                    android:textColor="@color/colorPrimaryDark"
                     android:id="@+id/title"
-                    android:paddingTop="10dp"
-                    android:paddingBottom="10dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/exo_2_medium"
-                    android:textAlignment="center" />
+                    android:paddingTop="10dp"
+                    android:paddingBottom="10dp"
+                    android:textAlignment="center"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="22sp"
+                    android:textStyle="bold" />
             </LinearLayout>
+
             <LinearLayout
-                android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
                 <Button
                     android:id="@+id/popup_btn"
+                    style="@style/AppTheme.Btn"
+                    android:onClick="onButtonClick"
                     android:paddingTop="20dp"
                     android:paddingBottom="20dp"
-                    android:text="@string/download"
-                    android:onClick="onButtonClick"
-                    style="@style/AppTheme.Btn" />
+                    android:text="@string/download" />
+
                 <TextView
-                    android:layout_gravity="center_horizontal"
                     android:id="@+id/textView4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
                     android:layout_marginTop="20dp"
                     android:text="@string/check_text"
                     android:textAlignment="center" />
             </LinearLayout>
         </LinearLayout>
+
         <FrameLayout
             android:id="@+id/fl_adplaceholder"
             android:layout_width="match_parent"
