--- a/app/src/main/res/drawable/res_0x7f080011_mtrl_checkbox_button_icon_indeterminate_unchecked__2.xml
+++ b/app/src/main/res/drawable/res_0x7f080011_mtrl_checkbox_button_icon_indeterminate_unchecked__2.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <objectAnimator xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:aapt="http://schemas.android.com/aapt"
-    android:duration="@integer/m3_sys_motion_duration_50"
+    android:duration="50"
     android:interpolator="?attr/motionEasingLinearInterpolator"
     android:propertyName="fillAlpha"
     android:valueFrom="1"
