--- a/app/src/main/res/drawable/res_0x7f080019_mtrl_checkbox_button_unchecked_checked__1.xml
+++ b/app/src/main/res/drawable/res_0x7f080019_mtrl_checkbox_button_unchecked_checked__1.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <objectAnimator xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:aapt="http://schemas.android.com/aapt"
-    android:duration="@integer/m3_sys_motion_duration_350"
+    android:duration="350"
     android:interpolator="?attr/motionEasingEmphasizedDecelerateInterpolator"
     android:propertyName="scaleY"
     android:valueFrom="0.6"
