--- a/app/src/main/res/layout/activity_subscription.xml
+++ b/app/src/main/res/layout/activity_subscription.xml
@@ -14,10 +14,7 @@
         android:layout_marginTop="15dp"
         android:layout_marginEnd="15dp"
         android:layout_marginBottom="15dp"
-        android:foreground="?android:attr/selectableItemBackground"
-        android:src="@drawable/cross_close_svgrepo_com"
-        app:tint="?attr/colorOnSecondary"
-        tools:targetApi="m" />
+        android:src="@drawable/cross_close_svgrepo_com" />
 
 
     <LinearLayout
